--- a/DnDCharacters/appsettings.json
+++ b/DnDCharacters/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "MySQLConnection": "server=localhost;port=3306;database=dnd_character_sheets;user=root;password=IH@v3N0Id3@?;",
+    "DnDCharactersEntityFrameworkCoreLocalConnection": "Server=(localdb)\\mssqllocaldb;Database=DnDCharacters;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "AllowedHosts": "*"
 }
