Updated appsettings.json and Program.cs to use the MySQL database. Runing into error on line 15 in Program.cs.

--- a/DnDCharacters/appsettings.json
+++ b/DnDCharacters/appsettings.json
@@ -7,8 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "MySQLConnection": "server=localhost;port=3306;database=dnd_character_sheets;user=root;password=IH@v3N0Id3@?;",
-    "DnDCharactersEntityFrameworkCoreLocalConnection": "Server=(localdb)\\mssqllocaldb;Database=DnDCharacters;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;User ID=root;Password=IH@v3N0Id3@?;Database=dnd_character_sheets"
   },
 
   "AllowedHosts": "*"
