--- a/DnDCharacters/DnDCharacters.csproj
+++ b/DnDCharacters/DnDCharacters.csproj
@@ -17,6 +17,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MySql.Data" Version="8.3.0" />
+    <PackageReference Include="MySqlConnector" Version="2.3.6" />
+    <PackageReference Include="MySqlConnector.DependencyInjection" Version="2.3.6" />
   </ItemGroup>
 
 </Project>
