--- a/DnDCharacters/appsettings.json
+++ b/DnDCharacters/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": "Server=localhost;User ID=root;Password=IH@v3N0Id3@?;Database=dnd_character_sheets"
+    "Default": "Server=localhost;User=root;Password=IH@v3N0Id3@?;Database=dnd_character_sheets;"
   },
 
   "AllowedHosts": "*"
