--- a/DnDCharacters/appsettings.json
+++ b/DnDCharacters/appsettings.json
@@ -5,10 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost;User=root;Password=IH@v3N0Id3@?;Database=dnd_character_sheets;"
-  },
-
-  "AllowedHosts": "*"
+    "Default": "Server=localhost;Database=dnd_character_sheets;User=root;Password=IH@v3N0Id3@?;"
+  }
 }
